--- a/balance/templates/inicio.html
+++ b/balance/templates/inicio.html
@@ -6,32 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BZ9 Balance</title>
-    <style></style>
+    <link rel="stylesheet" href="/static/css/flat-remix.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+
 </head>
 
 <body>
-    <header>Balance de gastos</header>
+    <header class="encabezado">Balance de gastos</header>
     <nav>Inicio | Nuevo</nav>
     <main>
 
         <h1>Lista de Movimientos</h1>
-        <table>
+        <table class="paper">
             <tr>
-                <th>Fecha</th>
-                <th>Concepto</th>
-                <th>I/G</th>
-                <th>Cantidad</th>
+                <th class="tit-tabla">Fecha</th>
+                <th class="tit-tabla">Hora</th>
+                <th class="tit-tabla">Concepto</th>
+                <th class="tit-tabla">I/G</th>
+                <th class="tit-tabla">Cantidad</th>
             </tr>
             {% for mov in movs %}
             <tr>
                 <td>{{mov.fecha}}</td>
+                <td>{{mov.hora}}</td>
                 <td>{{mov.concepto}}</td>
                 <td>
-                    {%if mov.tipo == 'I'%}
-                    ingreso
-                    {%else%}
-                    gasto
-                    {%endif%}
+                    {%if mov.tipo == 'I'%} ingreso {%else%} gasto {%endif%}
                 </td>
                 <td>{{mov.cantidad}}</td>
             </tr>
