--- a/balance/templates/alta.html
+++ b/balance/templates/alta.html
@@ -1,5 +1,29 @@
-{%extends 'base.html'%}
-{%block head_title%}Alta{%endblock head_title%}
-{%block contenido%}
-<h1>Alta de un nuevo registro</h1>
+{%extends 'base.html'%} {%block head_title%}Alta{%endblock head_title%} {%block page_title%}Alta de un nuevo movimiento{%endblock page_title%} {%block contenido%} {{super()}}
+<form action="/alta" method="post">
+    <div class="campo-formulario">
+        <label for="fecha">Fecha: </label>
+        <input type="date" name="fecha" id="fecha">
+    </div>
+    <div class="campo-formulario">
+        <label for="hora">Hora: </label>
+        <input type="time" name="hora" id="hora">
+    </div>
+    <div class="campo-formulario">
+        <label for="concepto">Concepto: </label>
+        <input type="text" name="concepto" id="concepto">
+    </div>
+    <div class="campo-formulario">
+        <input type="radio" name="tipo" id="ingreso" value="I">
+        <label for="ingreso" class="radio-label">Ingreso</label>
+        <input type="radio" name="tipo" id="gasto" value="G">
+        <label for="gasto" class="radio-label">Gasto</label>
+    </div>
+    <div class="campo-formulario">
+        <label for="cantidad">Cantidad</label>
+        <input type="number" name="cantidad" id="cantidad">
+    </div>
+    <div class="acciones">
+        <input type="submit" value="Guardar">
+    </div>
+</form>
 {%endblock contenido%}
